--- a/dvc.yaml
+++ b/dvc.yaml
@@ -18,3 +18,13 @@ stages:
     outs:
     - data/processed_data/X_test_scaled.csv
     - data/processed_data/X_train_scaled.csv
+  grid-search:
+    cmd: python src/data/grid_search.py
+    deps:
+    - data/processed_data/X_train_scaled.csv
+    - data/processed_data/X_test_scaled.csv
+    - data/processed_data/y_train.csv
+    - data/processed_data/y_test.csv
+    - src/data/grid_search.py
+    outs:
+    - models/ridge_linear_regression.pkl
