--- a/dvc.yaml
+++ b/dvc.yaml
@@ -22,9 +22,15 @@ stages:
     cmd: python src/data/grid_search.py
     deps:
     - data/processed_data/X_train_scaled.csv
-    - data/processed_data/X_test_scaled.csv
     - data/processed_data/y_train.csv
-    - data/processed_data/y_test.csv
     - src/data/grid_search.py
     outs:
     - models/ridge_linear_regression.pkl
+  training:
+    cmd: python src/models/training.py
+    deps:
+    - data/processed_data/X_train_scaled.csv
+    - data/processed_data/y_train.csv
+    - src/models/training.py
+    outs:
+    - models/ridge_linear_regression_trained.pkl
